<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Community Eyes</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="app_facebook_id">422852441406385</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cài đặt</string>
    <string name="already_a_user_log_in">Bạn đã đăng ký? Đăng nhập tại đây</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="my_complaints">Phản hồi vi phạm của tôi</string>
    <string name="faq_s">FAQ\'S</string>
    <string name="rate_us_on_appstore">Đánh giá chúng tôi trên Appstore</string>
    <string name="how_to_s">How To\'s</string>
    <string name="compaign">Chiến dịch</string>
    <string name="logout">Thoát</string>
    <string name="thank_you_post">Xin cám ơn! Phản hồi của bạn đã được ghi nhận thành công</string>
    <string name="view_it_on_mcty">Xem phản hồi trong thành phố</string>
    <string name="post_another">Viết một phản hồi khác</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="create_email">Tạo tài khoản với địa chỉ email</string>
    <string name="type_your_location">Điền vị trí của bạn</string>
    <string name="your_location">vị trí của bạn</string>
    <string name="full_name">Họ và tên</string>
    <string name="enter_full_name">Điền họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="or">Hoặc</string>
    <string name="login_with_facebook">Đăng nhập với facebook</string>
    <string name="sign_up_with_facebook">Đăng ký bằng tài khoản facebook</string>
    <string name="sign_up_with_e_mail">Đăng ký bằng email</string>
    <string name="add_description_vehicle_number">Mô tả chi tiết / biển số phương tiện</string>
    <string name="email">Email</string>
    <string name="enter_email">Điền Email</string>
    <string name="skip">Bỏ qua</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="please_enter_description_vehicle_number">Nhập mô tả chi tiết / biển số phương tiện</string>
    <string name="riding_without_a_helmet">Lái xe máy không đội mũ bảo hiểm</string>
    <string name="enter_password">Điền mật khẩu</string>
    <string name="category">Danh mục</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="set_location">Cài đặt vị trí</string>
    <string name="login">Đăng nhập</string>
    <string name="developing">Đang phát triển...</string>
    <string name="report_violation">Báo cáo về vi phạm</string>
    <string name="video_report">Video</string>
    <string name="sign_up">Sign Up</string>
    <string name="report_traffic_violation">Bạn muốn báo cáo việc vi phạm giao thông?</string>
    <string name="it_is_as_easy_as_1_2_3">Dễ dàng như đếm 1-2-3</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="enter_mobile_number">Nhập số điện thoại</string>
    <string name="no_parking">Cấm đỗ</string>
    <string name="one_way_no_entry">Đi ngược chiều trên làn đường một chiều</string>
    <string name="parking_on_footpath">Đỗ xe trên làn dành cho người đi bộ</string>
    <string name="riding_on_footpath">Đi xe máy trên làn người đi bộ</string>
    <string name="riding_without_helmet">Lái xe không có mũ bảo hiểm</string>
    <string name="defective_number_plate">Biển số xe bị hư hại</string>
    <string name="not_wearing_seat_belt">Không cài dây an toàn khi ngồi trên xe ôtô</string>
    <string name="zebra_cross">Dừng xe trên vạch sang đường cho người đi bộ</string>
    <string name="uturn">Vòng ngược xe trên tuyến phố cấm vòng ngược</string>
    <string name="triple_riding">Đi xe máy chở 3 người trở lên</string>
    <string name="mobile_phone">Sử dụng điện thoại khi lái xe</string>
    <string name="lane_discipline">Lái xe không theo làn đường quy định</string>
    <string name="wrong_parking">Đỗ xe không đúng nơi quy định</string>

    <string name="cmt_or_the_can_cuoc">Chứng minh thư/ Thẻ căn cước</string>
    <string name="enter_cmt_or_the_can_cuoc">Điền Chứng minh thư/ Thẻ căn cước</string>
    <string name="address">Địa chỉ</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="input_data_error">Bạn phải nhập đủ thông tin email, mật khẩu, họ tên và số điện thoại!</string>
    <string name="input_data_signup_error">Bạn phải nhập đủ thông tin email, mật khẩu, họ tên và số điện thoại!</string>
    <string name="input_fb_error">Không thể lấy được dữ từ facebook của bạn, hãy đăng nhập bằng email!</string>

    <!-- popup news -->
    <string name="news_popup_title">Chiến dịch</string>
    <string name="new_detail">hiện</string>
    <string name="new_close_up">đóng</string>
    <string name="change_money">Đổi tiền</string>
    <string name="validate_email">email không đúng định dạng</string>
    <string name="loading">loading…</string>
    <string name="list_category_motorbike">Danh sách Vi phạm xe máy</string>
    <string name="list_category_oto">Danh sách Vi phạm oto</string>
    <string name="penance">Phạt %s</string>

    <string name="convert_point_to_coin_start">Nếu bạn chưa có tài khoản hay bấm\u0020</string>
    <string name="convert_point_to_coin_link"><u>đây</u></string>
    <string name="convert_point_to_coin_end">\u0020để đăng ký tài khoản </string>
    <string name="convert_point_to_coin">\nNếu bạn có tài khoản thì hãy nhập số điện thoại để chuyển point thành gCoin </string>
    <string name="vietnam_code">+84</string>
    <string name="convert_point">Đổi point</string>
    <string name="order_coin_success">Bạn đã chuyển thành công %d point đến tài khoản của bạn</string>
    <string name="cancel_coin">Huỷ giao dịch</string>
    <string name="order_coin_alert">Chuyển coint không thành công</string>
    <string name="order_coin_fail">Chuyển point thất bại</string>
    <string name="order_coin_alert_number">Bạn phải có tối thiểu 50 point mới có thể chuyển được</string>
</resources>