<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_public_eye"
            android:scaleType="center" />

        <TextView
            style="@style/TextViewYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_smaller"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="@dimen/large_text" />

        <com.hiepkhach9x.publiceyes.view.UnderLineEditText
            android:id="@+id/ed_email"
            style="@style/UnderLineEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textSize="@dimen/large_text" />

        <TextView
            style="@style/TextViewYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_smaller"
            android:text="@string/password"
            android:textSize="@dimen/large_text" />

        <include
            layout="@layout/layout_input_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_smaller"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/large_text" />

        <FrameLayout
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue_fb"
                android:text="@string/login_with_facebook"
                android:textSize="@dimen/larger_text" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_facebook" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:background="@color/yellowColor"
        android:text="@string/text_continue"
        android:textSize="@dimen/larger_text" />
</FrameLayout>