<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_public_eys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_largest"
        android:background="@drawable/img_public_eye"
        android:scaleType="center" />

    <TextView
        android:id="@+id/text_description"
        style="@style/TextViewYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_public_eys"
        android:layout_marginLeft="@dimen/space_normal"
        android:layout_marginRight="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_largest"
        android:text="@string/add_description_vehicle_number"
        android:textSize="@dimen/larger_text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_description"
        android:layout_marginBottom="@dimen/space_large"
        android:layout_marginLeft="@dimen/space_normal"
        android:layout_marginRight="@dimen/space_normal"
        android:background="@drawable/button_white"
        android:gravity="top|left"
        android:hint="@string/please_enter_description_vehicle_number"
        android:maxHeight="300dp"
        android:minHeight="200dp"
        android:padding="@dimen/space_small" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/yellowColor"
        android:gravity="center"
        android:text="@string/text_continue"
        android:textSize="@dimen/larger_text" />
</RelativeLayout>